--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "react": "^16.8.6",
+    "react-native-elements": "^1.1.0",
+    "react-native-responsive-screen": "^1.2.1",
+    "react-native-responsive-ui": "^1.1.1",
+    "react-navigation": "^3.6.1",
+    "react-redux": "6.0.1",
+    "redux": "4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "schedule": "^0.4.0"
   },
   "private": true
 }
